# PortionExplosionAI

./: .gitignore  README.md  build.sh
.github/workflows/: blank.yml  c-cpp.yml  main.yml
AI/: CMakeLists.txt  README.md
AI/src/action/: Action.hpp
AI/src/state/: CMakeLists.txt  MarbleColor.hpp  MarbleStorage.cpp  Portion.cpp
AI/test/: CMakeLists.txt  TestPortion.cpp  TestState.cpp
GUI/: .eslintrc.yml  .prettierrc.yml  package-lock.json  package.json  tsconfig.json  webpack.config.js
GUI/electron/: package.json
GUI/electron/public/: electron.js
GUI/src/: index.tsx  main.ts  store.ts
GUI/src/actions/: DiscardedPortionActions.ts  MakingPortionActions.ts  SavingMarbleActions.ts  UsablePortionActions.ts  UserActions.ts
GUI/src/components/: CountButton.tsx  InputForm.tsx  TextBox.tsx  UserForm.tsx
GUI/src/components/MakingPortionList/: MakingPortionInput.tsx  MakingPortionList.tsx  MakingPortionListContainer.tsx
GUI/src/components/PortionList/: PortionInput.tsx  PortionList.tsx  PortionListContainer.tsx
GUI/src/components/SavingMarblesInput/: SavingMarbleInput.tsx  SavingMarbleInputContainer.tsx
GUI/src/components/common/: CountInput.tsx  MarbleColorSelector.tsx  PortionTypeSelector.tsx
GUI/src/reducers/: DiscardedPortions.ts  MakingPortions.ts  SavingMarbles.ts  UsablePortions.ts  UserReducer.ts
GUI/src/states/: MakingPortion.ts  MarbleColor.ts  Portion.ts  State.ts  User.ts
src/: CMakeLists.txt
src/action/: Action.hpp  ActionCreator.cpp  ActionCreator.hpp  CMakeLists.txt
src/state/: CMakeLists.txt  MarbleColor.cpp  MarbleStorage.cpp  MarbleStorage.hpp  Portion.hpp  State.cpp  State.hpp
test/: CMakeLists.txt  TestMarbleColor.cpp  TestMarbleStorage.cpp  TestPortion.cpp  TestState.cpp  TestUtil.cpp  TestUtil.hpp
